Add initial work & plumbing for products
