# server/src/configuration.rs
@@ -1,3 +1,6 @@
+use crate::models::Product;
+
+// APPLICATION
 #[derive(serde::Deserialize)]
 pub struct Settings {
 	pub database: DatabaseSettings,
@@ -15,4 +18,18 @@ pub fn get_configuration() -> Result<Settings, config::ConfigError> {
 		.build()?;
 
 	settings.try_deserialize::<Settings>()
+}
+
+// PRODUCTS
+#[derive(serde::Deserialize)]
+pub struct ProductConfiguration {
+	pub products: Vec<Product>,
+}
+
+pub fn get_products() -> Result<ProductConfiguration, config::ConfigError> {
+	let products = config::Config::builder()
+		.add_source(config::File::new("products.yml", config::FileFormat::Yaml))
+		.build()?;
+
+		products.try_deserialize::<ProductConfiguration>()
 }
