# server/src/schema.rs
@@ -1,6 +1,15 @@
 // @generated automatically by Diesel CLI.
 
 diesel::table! {
+    products (id) {
+        id -> Text,
+        name -> Text,
+        has_deposit -> Bool,
+        price -> Integer,
+    }
+}
+
+diesel::table! {
     users (id) {
         id -> Text,
         created_at -> Text,
@@ -9,3 +18,8 @@ diesel::table! {
         role -> Text,
     }
 }
+
+diesel::allow_tables_to_appear_in_same_query!(
+    products,
+    users,
+);
